--- a/trustchain-payloadgenerator/src/main/res/layout/fragment_create_payload.xml
+++ b/trustchain-payloadgenerator/src/main/res/layout/fragment_create_payload.xml
@@ -51,14 +51,14 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/txtAvailableAmount"
+            android:id="@+id/txtAmount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Amount of currency available:"
             android:paddingHorizontal="3dp" />
 
         <EditText
-            android:id="@+id/editTextAvailableAmount"
+            android:id="@+id/editTextAmount"
             android:gravity="start"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -66,7 +66,7 @@
             android:hint="Enter Amount Available" />
 
         <TextView
-            android:id="@+id/txtRequiredAmount"
+            android:id="@+id/txtPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -74,7 +74,7 @@
             android:text="Price:" />
 
         <EditText
-            android:id="@+id/editTextRequiredAmount"
+            android:id="@+id/editTextPrice"
             android:gravity="start"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
