--- a/trustchain-payloadgenerator/src/main/res/layout/fragment_payload.xml
+++ b/trustchain-payloadgenerator/src/main/res/layout/fragment_payload.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,7 +8,7 @@
         android:id="@+id/buttonPayload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
         android:text="New Payload"
         app:layout_constraintEnd_toEndOf="parent"
@@ -17,20 +16,28 @@
 
     <Switch
         android:id="@+id/switchAutoMessage"
-        android:layout_width="161dp"
-        android:layout_height="59dp"
-        android:layout_marginEnd="200dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         android:checked="false"
         android:text="Generate Payloads"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/Wallet" />
 
     <LinearLayout
         android:id="@+id/Wallet"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="95dp"
         android:gravity="top"
         android:orientation="horizontal"
         android:weightSum="4">
